<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dadosPessoaFisica"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="18sp"
        android:typeface="serif"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        />

    <EditText
        android:id="@+id/nomePessoa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cpf"

        android:layout_marginLeft="20dp"
        />

    <EditText
        android:id="@+id/cpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idade"

        android:layout_marginLeft="20dp"
        />

    <EditText
        android:id="@+id/idade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"

        android:inputType="number" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefone"

        android:layout_marginLeft="20dp"
        />

    <EditText
        android:id="@+id/telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"

        android:inputType="number" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"

        android:layout_marginLeft="20dp"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"

        android:inputType="text" />

    <Button
        android:id="@+id/btninserir"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/inserir" />

    <Button
        android:id="@+id/btnlistar"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/listar" />

    <Button
        android:id="@+id/btnvoltarinicio"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/voltar" />

</LinearLayout>